# workspace-repo-map

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  RELEASE.md  USAGE.md  example.index.toml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: publish-shim.yml  release-artifacts.yml
docs/: ENTERPRISE-READINESS.md  PROTOCOL.md
docs/brand/: README.md
docs/superpowers/plans/: 2026-06-18-productize-core-phase1.md  2026-06-23-graph-viz-dashboard.md  2026-06-23-repo-graph-context-engine.md  2026-06-24-index-atlas-engine.md  2026-06-24-index-atlas-visual-dashboard.md  2026-06-24-index-ecosystem-resolvers.md  2026-06-24-index-v1.1-enhancements.md  2026-06-24-index-verified-architecture-intelligence.md
docs/superpowers/specs/: 2026-06-18-productize-core-design.md  2026-06-23-repo-graph-context-engine-design.md  2026-06-24-index-atlas-design.md  2026-06-24-index-v1.1-enhancements-design.md  2026-06-24-index-verified-architecture-intelligence-design.md
examples/: atlas-demo.html  atlas_demo.py  demo.py  wiki-demo.html  wiki_demo.py
scripts/: dogfood_recovery.py  viz_dogfood.py
shim/: README.md  pyproject.toml
shim/src/workspace_repo_map/: __init__.py
src/index_graph/: __init__.py  classify.py  cli.py  cli_parser.py  config.py  flagship.py  gitmeta.py  mcp.py  model.py  router.py  scan.py  verify.py
src/index_graph/arch/: check.py
src/index_graph/certify/: __init__.py  certificate.py
src/index_graph/cli_handlers/: __init__.py  serve.py
src/index_graph/context/: __init__.py  envelope.py  focus.py  pack.py  select.py
src/index_graph/drift/: __init__.py  diff.py  snapshot.py
src/index_graph/freshness/: __init__.py  compare.py  fingerprint.py  invalidate.py  invalidate_cli.py
src/index_graph/graph/: __init__.py  build.py  cycles.py  edges.py  roles.py  walk.py
src/index_graph/graph/resolvers/: __init__.py  cpp.py  csharp.py  (+7 more)
src/index_graph/internals/: __init__.py  build.py  modules.py
src/index_graph/knowledge/: atlas.py  docs.py  markdown.py
src/index_graph/viz/: __init__.py  atlas_assets.py  atlas_html.py  charts.py  html.py  layout.py  manifest.py  svg.py  theme.py
src/index_graph/wiki/: __init__.py  cli.py  html.py  pack.py  seal.py  serve.py  serve_pages.py
src/workspace_repo_map/: __init__.py  cli.py  gitmeta.py  map.py
src/workspace_repo_map/graph/: __init__.py
src/workspace_repo_map/viz/: __init__.py  charts.py  html.py  layout.py  mermaid.py
tests/: test_arch_check.py  test_atlas.py  test_atlas_cli.py  test_atlas_demo.py  test_atlas_html.py  test_browser_evidence_refs.py  test_build.py  test_certificate.py  test_classify.py  test_cli.py  test_cli_subcommands.py  test_cli_verify.py  test_config.py  test_config_architecture.py  test_context_envelope.py  test_context_preservation.py  test_cycles.py  test_drift.py  test_edges.py  test_example_config.py  test_flagship_cli.py  test_focus_rejection.py  test_freshness.py  test_gitmeta.py  test_internals_build.py  test_internals_modules.py  test_internals_reach.py  test_invalidate.py  test_map_write_notice.py  test_markdown.py  test_mcp.py  test_model.py  test_pack.py  test_readme_onboarding.py  test_rename_guardrail.py  test_resolver_ecosystems.py  test_resolver_java.py  test_resolver_javascript.py  test_resolver_python.py  test_roles.py  (+28 more)
tests/fixtures/gradle-app/: build.gradle
tests/fixtures/java-app/: pom.xml
tests/fixtures/java-lib/: pom.xml
tests/fixtures/py_app/: pyproject.toml
tests/fixtures/py_lib/: pyproject.toml
(+4 files in other folders)
