[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "workspace-repo-map"
dynamic = ["version"]
description = "Compact JSON repository inventory maps for multi-repo workspaces."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Zain Dana Harper" }]
keywords = ["git", "inventory", "workspace", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
workspace-repo-map = "workspace_repo_map.cli:main"

[project.urls]
Homepage = "https://github.com/HarperZ9/workspace-repo-map"
Repository = "https://github.com/HarperZ9/workspace-repo-map"
Issues = "https://github.com/HarperZ9/workspace-repo-map/issues"

[tool.hatch.version]
path = "src/workspace_repo_map/__init__.py"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
