[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "index-graph"
dynamic = ["version"]
description = "Compact JSON repository inventory maps for multi-repo workspaces."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Zain Dana Harper" }]
keywords = ["git", "inventory", "workspace", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
index = "index_graph.cli:main"

[project.urls]
Homepage = "https://github.com/HarperZ9/index"
Repository = "https://github.com/HarperZ9/index"
Issues = "https://github.com/HarperZ9/index/issues"

[tool.hatch.version]
path = "src/index_graph/__init__.py"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
