[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "index-graph"
dynamic = ["version"]
description = "Evidence-built repo and documentation atlas for multi-repo workspaces."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "FSL-1.1-MIT" }
authors = [{ name = "Zain Dana Harper" }]
keywords = ["git", "inventory", "workspace", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
index = "index_graph.cli:main"

[project.urls]
Homepage = "https://github.com/HarperZ9/index"
Repository = "https://github.com/HarperZ9/index"
Issues = "https://github.com/HarperZ9/index/issues"

[tool.hatch.version]
path = "src/index_graph/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/index_graph"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
